# ComplexNumbers

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  algebraic_8h_source.html  classComplexNumbers_1_1Algebraic.html  classComplexNumbers_1_1Algebraic.js  classComplexNumbers_1_1Complex-members.html  classComplexNumbers_1_1Complex.html  classComplexNumbers_1_1Complex.js  classComplexNumbers_1_1Complex__inherit__graph.dot  classComplexNumbers_1_1Exponential-members.html  classComplexNumbers_1_1Exponential.html  classComplexNumbers_1_1Exponential__inherit__graph.dot  complex_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.dot  exponential_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_2.dot  inherits.html  navtreeindex0.js  trigonometric_8h_source.html
docs/html/: annotated.html  annotated_dup.js  classComplexNumbers_1_1Algebraic-members.html  classComplexNumbers_1_1Algebraic__inherit__graph.dot  classComplexNumbers_1_1Complex.html  classComplexNumbers_1_1Trigonometric.html  classes.html  dir_996ee5b6021550894169dccd739a2923.html  dir_996ee5b6021550894169dccd739a2923.js  dir_996ee5b6021550894169dccd739a2923_dep.dot  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  inherit_graph_0.dot  inherit_graph_1.dot  menudata.js  navtreedata.js
docs/html/search/: all_0.js  all_1.js  all_4.js  all_7.js  all_8.js  functions_0.js  functions_1.js  functions_6.js  functions_7.js  searchdata.js  variables_1.js
search/: all_2.js  all_3.js  all_6.js  classes_0.js  classes_1.js  classes_3.js  functions_3.js
src/: CMakeLists.txt
src/algebraic/: CMakeLists.txt  algebraic.cpp
src/exponential/: CMakeLists.txt  exponential.cpp
src/include/complex_numbers/: algebraic.h  complex.h  exponential.h  trigonometric.h
src/trigonometric/: CMakeLists.txt  trigonometric.cpp
tests/: CMakeLists.txt  algebraic_tests.cpp
